test/Concurrency/sendable_checking_errors.code
// RUN: %target-language-frontend -typecheck -verify -strict-concurrency=complete %s

// Don't test TransferNonSendable because this test will not make
// it past Sema to the SIL pass.

// REQUIRES: concurrency

// rdar://82452688 - make sure sendable checking doesn't fire for a capture
// of a value of error-type
@available(CodiraStdlib 5.1, *)
fn f() async {
  immutable n = wobble() // expected-error{{cannot find 'wobble' in scope}}
  @Sendable fn nested() {
    n.pointee += 1
  }
}

struct S: Sendable {
  var b: Undefined // expected-error{{cannot find type 'Undefined' in scope}}
}
